<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/HX1"
        android:layout_width="193dp"
        android:layout_height="164dp"
        app:layout_constraintBottom_toTopOf="@+id/dProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644"
        app:srcCompat="@mipmap/hyperx" />

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_marginBottom="124dp"
        android:text="@string/comprar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAgregar" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="221dp"
        android:layout_height="60dp"
        android:text="@string/agregar"
        app:layout_constraintBottom_toTopOf="@+id/btnComprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCantidad"
        app:layout_constraintVertical_bias="0.494" />

    <EditText
        android:id="@+id/etCantidad"
        android:layout_width="133dp"
        android:layout_height="47dp"
        android:layout_marginBottom="296dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/cantidad"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnAgregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pMemoria"
        android:layout_width="126dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:text="@string/precio_memoria"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/Cantidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dProducto"
        app:layout_constraintVertical_bias="0.41" />

    <TextView
        android:id="@+id/Precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/precio"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/Cantidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pMemoria"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dProducto" />

    <TextView
        android:id="@+id/dProducto"
        android:layout_width="322dp"
        android:layout_height="46dp"
        android:text="@string/producto"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/Precio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HX1" />

</androidx.constraintlayout.widget.ConstraintLayout>