<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Carrito">

    <ImageView
        android:id="@+id/HX2"
        android:layout_width="226dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/Descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/hyperx" />

    <TextView
        android:id="@+id/d2Producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/producto"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HX2"
        app:layout_constraintVertical_bias="0.326" />

    <TextView
        android:id="@+id/Total"
        android:layout_width="132dp"
        android:layout_height="20dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnPago"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d2Producto"
        app:layout_constraintVertical_bias="0.31" />

    <TextView
        android:id="@+id/Descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/descripcion"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/pTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HX2" />

    <TextView
        android:id="@+id/pTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/pago_total"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnPago"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Total"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Descripcion" />

    <Button
        android:id="@+id/btnPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pagar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pTotal" />
</androidx.constraintlayout.widget.ConstraintLayout>